--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
+    "recharts": "^3.7.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.4"
   },
