--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "docx": "^9.6.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.563.0",
     "next": "^15.0.0",
